Legend:

[+] New/improved feature
[B] Bug fixed
[K] Known issue
[O] Other
[A] API semantics

Change log
==========

v0.10.4

[B] crofchan: fixed a bug introduced in v0.10.3 while fixing
    the other bug: actively established connections must not be
    removed upon handle_closed()
[B] cthread: check timer for expiration again before calling 
    handle_timeout()

v0.10.3

[O] added cclockid class to prevent invalid use of class ctimespec
[+] crofsock: use SO_LINGER option for coordinated shutdown
[+] crofsock: make backlog for listening mode configurable, defaults to 
    64 established TCP connections
[B] crofconn: fixed potential race condition causing a Hello expiration
[A] crofchan: send CLOSE notification to application when replacing
    an existing connection object (restart)
[B] crofchan: fixed bug in handle_closed(): conn was not removed from
    crofchan::conns map leading to a double free

v0.10.2

[+] more verbose exception handling
[+] asserts to thread handlers
[+] cthread: ignore signals in event loop
[B] coxmatches::copy_matches(): copy experimental matches properly

v0.10.1

[B] fixed a race condition in crofsock::send_from_queue()

v0.10.0

[+] revised workflow
[+] enhanced flow control
[+] revised exceptions structure
[+] new journaling subsystem replacing logging facility

v0.7.0

[+] New internal threading model, running rofl's main ioloop by 
    application not necessary any more
[O] Revised API of classes cofmsg_group_mod and cofgroupmod

v0.6.2

[O] merged logging related pull request #1
[B] fixed stalling situation in crofsock under higher load
[B] making class indent thread aware
[B] fixed buffer bloat like situation in crofqueue under high loads
[O] fixed hex output in some coxmatch classes (Fixed issue #14)
[O] fixed hex output for classes cofgroupmod and cofmsg_group_mod 
    for group-id. Fixes issue #13.

v0.6.1

[B] Distributing missing ctspaddress.h
[B] Fix versioning.m4 for subpackage and out-of-repository builds

v0.6.0
